fix yellow errors